Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Columna principal -->
     <div class="main-column">
       <section id="intro">
-        <h2>1. Introducción</h2>
+        <h2> Introducción</h2>
         <p>
           En la actualidad, la privacidad se ha convertido en uno de los temas más debatidos dentro de la relación entre ciencia, tecnología y sociedad. 
           El avance de los sistemas digitales, el uso masivo de redes sociales y la expansión de los dispositivos inteligentes han generado nuevas formas de vigilancia,
@@ -44,7 +44,7 @@
       </section>
 
       <section id="contexto">
-        <h2>2. Contexto Científico y Tecnológico</h2>
+        <h2> Contexto Científico y Tecnológico</h2>
         <p>
           La vigilancia masiva surge del desarrollo científico en áreas como la inteligencia artificial, el big data y la informática. 
           Estas tecnologías permiten recolectar, analizar y cruzar grandes volúmenes de datos personales en tiempo real. 
@@ -53,7 +53,7 @@
       </section>
 
       <section id="impacto">
-        <h2>3. Impacto Social y Ético</h2>
+        <h2> Impacto Social y Ético</h2>
         <p>
           La vigilancia constante modifica las formas en que las personas se comportan y se relacionan. 
           Se genera una sensación de observación permanente que afecta la libertad de expresión y la intimidad individual. 
@@ -62,7 +62,7 @@
       </section>
 
       <section id="cts">
-        <h2>4. Análisis desde la Perspectiva CTS</h2>
+        <h2> Análisis desde la Perspectiva CTS</h2>
         <p>
           Desde el enfoque de Ciencia, Tecnología y Sociedad, la vigilancia masiva no puede entenderse solo como un fenómeno técnico, 
           sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. 
@@ -177,7 +177,7 @@
 
   <!-- TEST + ESTADÍSTICAS -->
   <section id="test">
-    <h2>5. ¿Qué tan vigilado estás?</h2>
+    <h2> ¿Qué tan vigilado estás?</h2>
 
     <div class="test-y-stats">
 
@@ -206,7 +206,7 @@
 
       <!-- ESTADÍSTICAS -->
       <div id="estadisticas" class="stats-col">
-        <h3>📊 Resultados de la clase</h3>
+        <h3> Resultados de la clase</h3>
         <div class="stats-container">
 
           <div class="stat-item">
@@ -247,7 +247,7 @@
 
   <!-- Bibliografía -->
   <section id="refs">
-    <h2>6. Bibliografía</h2>
+    <h2> Bibliografía</h2>
     <ul>
       <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
       <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
@@ -282,7 +282,7 @@
 
   <!-- CONTACTO -->
   <section id="contacto">
-    <h2>7. Contacto</h2>
+    <h2> Contacto</h2>
     <p>Si tenés dudas, inquietudes o querés dejar un comentario sobre la vigilancia digital, podés hacerlo acá:</p>
 
     <form class="contact-form">
@@ -308,3 +308,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
