Revise index.html with updated content and structure
Updated the content and structure of the index.html file, including sections on introduction, context, impact, and real cases of mass surveillance.

--- a/index.html
+++ b/index.html
@@ -34,17 +34,21 @@
   <main class="content-layout">
     <!-- Columna principal -->
     <div class="main-column">
+
+      <!-- INTRO -->
       <section id="intro">
-        <h2> Introducción</h2>
+        <h2>1. Introducción</h2>
         <p>
-          En la actualidad, la privacidad se ha convertido en uno de los temas más debatidos dentro de la relación entre ciencia, tecnología y sociedad. 
-          El avance de los sistemas digitales, el uso masivo de redes sociales y la expansión de los dispositivos inteligentes han generado nuevas formas de vigilancia,
-          muchas veces invisibles, que ponen en tensión los límites entre seguridad, libertad y control.
+          En la actualidad, la privacidad se ha convertido en uno de los temas más debatidos dentro de la relación entre ciencia, 
+          tecnología y sociedad. El avance de los sistemas digitales, el uso masivo de redes sociales y la expansión de los 
+          dispositivos inteligentes han generado nuevas formas de vigilancia, muchas veces invisibles, que ponen en tensión los 
+          límites entre seguridad, libertad y control.
         </p>
       </section>
 
+      <!-- CONTEXTO -->
       <section id="contexto">
-        <h2> Contexto Científico y Tecnológico</h2>
+        <h2>2. Contexto Científico y Tecnológico</h2>
         <p>
           La vigilancia masiva surge del desarrollo científico en áreas como la inteligencia artificial, el big data y la informática. 
           Estas tecnologías permiten recolectar, analizar y cruzar grandes volúmenes de datos personales en tiempo real. 
@@ -52,30 +56,35 @@
         </p>
       </section>
 
+      <!-- IMPACTO -->
       <section id="impacto">
-        <h2> Impacto Social y Ético</h2>
+        <h2>3. Impacto Social y Ético</h2>
         <p>
-          La vigilancia constante modifica las formas en que las personas se comportan y se relacionan. 
-          Se genera una sensación de observación permanente que afecta la libertad de expresión y la intimidad individual. 
-          Desde el punto de vista ético, se discuten los límites de la recolección de datos y la responsabilidad de quienes los manipulan.
+          La vigilancia constante modifica las formas en que las personas se comportan y se relacionan. Se genera una sensación de 
+          observación permanente que afecta la libertad de expresión y la intimidad individual. Desde el punto de vista ético, se 
+          discuten los límites de la recolección de datos y la responsabilidad de quienes los manipulan.
         </p>
       </section>
 
+      <!-- CTS -->
       <section id="cts">
-        <h2> Análisis desde la Perspectiva CTS</h2>
+        <h2>4. Análisis desde la Perspectiva CTS</h2>
         <p>
           Desde el enfoque de Ciencia, Tecnología y Sociedad, la vigilancia masiva no puede entenderse solo como un fenómeno técnico, 
-          sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. 
-          La tecnología, lejos de ser neutral, refleja las estructuras de poder que la crean y la utilizan.
+          sino como un entramado sociotécnico donde intervienen intereses políticos, económicos y culturales. La tecnología, lejos de 
+          ser neutral, refleja las estructuras de poder que la crean y la utilizan.
         </p>
       </section>
     </div>
 
-    <!-- Columna lateral (FAQ + Casos Reales) -->
+    <!-- Columna lateral -->
     <aside class="side-column">
+      
+      <!-- FAQ -->
       <section id="faq">
         <h2>Preguntas Frecuentes</h2>
         <div class="faq-container">
+
           <div class="faq-item">
             <button class="faq-question">¿Qué es la vigilancia masiva?</button>
             <div class="faq-answer">
@@ -103,15 +112,17 @@
               <p>Usá contraseñas seguras, configurá la privacidad de tus redes, evitá compartir información sensible y usá autenticación de dos pasos.</p>
             </div>
           </div>
+
         </div>
       </section>
 
+      <!-- CASOS -->
       <section id="casos">
         <h2>Casos Reales de Vigilancia Masiva</h2>
         <div class="casos-container">
+
           <article class="caso">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Edward_Snowden-2.jpg"
-                 onerror="this.src='https://cdn.pixabay.com/photo/2021/05/19/18/46/cyber-security-6268578_1280.png'" 
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Edward_Snowden_%28cropped%29.jpg"
                  alt="Edward Snowden" />
             <div>
               <h3>Edward Snowden (2013)</h3>
@@ -120,8 +131,7 @@
           </article>
 
           <article class="caso">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Cambridge_Analytica_logo.svg"
-                 onerror="this.src='https://cdn.pixabay.com/photo/2020/07/02/19/08/privacy-5365149_1280.png'"
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Cambridge_Analytica_logo.png"
                  alt="Cambridge Analytica" />
             <div>
               <h3>Cambridge Analytica (2018)</h3>
@@ -130,54 +140,62 @@
           </article>
 
           <article class="caso">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Beijing_Skyline_2020.jpg"
-                 onerror="this.src='https://cdn.pixabay.com/photo/2021/04/06/19/42/surveillance-6155838_1280.png'"
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Beijing_Skyline_2018.jpg/1280px-Beijing_Skyline_2018.jpg"
                  alt="Crédito Social China" />
             <div>
               <h3>Crédito Social en China</h3>
-              <p>Un sistema que evalúa el comportamiento ciudadano mediante IA, recompensando o sancionando conductas.</p>
+              <p>Sistema que evalúa y controla conductas ciudadanas mediante vigilancia basada en IA.</p>
             </div>
           </article>
+
         </div>
       </section>
+
     </aside>
   </main>
 
   <!-- CARRUSEL DE LIBROS -->
   <section id="libros">
     <h2>Libros vinculados a la temática</h2>
+
     <div class="carousel">
+
       <div class="book-card">
-        <h3> Nick Bostrom – Superinteligencia</h3>
-        <p><strong>Aporte:</strong> Analiza los riesgos del desarrollo de la IA, incluyendo la vigilancia y pérdida de autonomía humana.</p>
-        <p><strong>Relevancia:</strong> Contexto científico y tecnológico.</p>
+        <h3>Nick Bostrom – Superinteligencia</h3>
+        <p><strong>Aporte:</strong> Analiza riesgos de IA avanzada.</p>
+        <p><strong>Relevancia:</strong> Contexto científico.</p>
       </div>
+
       <div class="book-card">
-        <h3> Javier Echeverría – La revolución tecnocientífica</h3>
-        <p><strong>Aporte:</strong> Explica cómo la tecnociencia redefine las relaciones sociales y de poder.</p>
+        <h3>Javier Echeverría – La revolución tecnocientífica</h3>
+        <p><strong>Aporte:</strong> Explica cómo la tecnociencia transforma la sociedad.</p>
         <p><strong>Relevancia:</strong> Análisis CTS.</p>
       </div>
+
       <div class="book-card">
-        <h3> Nicholas Carr – Atrapados</h3>
-        <p><strong>Aporte:</strong> Analiza cómo la hiperconectividad afecta la atención y la conducta.</p>
-        <p><strong>Relevancia:</strong> Impacto social y ético.</p>
+        <h3>Nicholas Carr – Atrapados</h3>
+        <p><strong>Aporte:</strong> Estudia la hiperconectividad y el comportamiento.</p>
+        <p><strong>Relevancia:</strong> Impacto social.</p>
       </div>
+
       <div class="book-card">
-        <h3> Nassim Nicholas Taleb – El cisne negro</h3>
-        <p><strong>Aporte:</strong> Aborda la imprevisibilidad de sistemas complejos como el big data.</p>
+        <h3>Nassim Nicholas Taleb – El cisne negro</h3>
+        <p><strong>Aporte:</strong> Analiza imprevisibilidad de sistemas complejos.</p>
         <p><strong>Relevancia:</strong> Innovación.</p>
       </div>
+
       <div class="book-card">
-        <h3> Edward O. Wilson – El sentido de la existencia humana</h3>
-        <p><strong>Aporte:</strong> Integra ciencia y ética para un futuro equilibrado.</p>
+        <h3>Edward O. Wilson – El sentido de la existencia humana</h3>
+        <p><strong>Aporte:</strong> Une ciencia y ética.</p>
         <p><strong>Relevancia:</strong> Conclusiones.</p>
       </div>
+
     </div>
   </section>
 
   <!-- TEST + ESTADÍSTICAS -->
   <section id="test">
-    <h2> ¿Qué tan vigilado estás?</h2>
+    <h2>5. ¿Qué tan vigilado estás?</h2>
 
     <div class="test-y-stats">
 
@@ -206,61 +224,73 @@
 
       <!-- ESTADÍSTICAS -->
       <div id="estadisticas" class="stats-col">
-        <h3> Resultados de la clase</h3>
+        <h3>📊 Resultados de la clase</h3>
+
         <div class="stats-container">
 
           <div class="stat-item">
             <p><strong>Pregunta 1</strong> — Sí 60% / No 40%</p>
-            <div class="bar yes" style="width:60%"></div>
+            <div class="bar yes" style="--target-width:60%"></div>
           </div>
 
           <div class="stat-item">
             <p><strong>Pregunta 2</strong> — Sí 14% / No 86%</p>
-            <div class="bar yes" style="width:14%"></div>
+            <div class="bar yes" style="--target-width:14%"></div>
           </div>
 
           <div class="stat-item">
             <p><strong>Pregunta 3</strong> — Sí 71% / No 29%</p>
-            <div class="bar yes" style="width:71%"></div>
+            <div class="bar yes" style="--target-width:71%"></div>
           </div>
 
           <div class="stat-item">
             <p><strong>Pregunta 4</strong> — Sí 21% / No 79%</p>
-            <div class="bar yes" style="width:21%"></div>
+            <div class="bar yes" style="--target-width:21%"></div>
           </div>
 
           <div class="stat-item">
             <p><strong>Pregunta 5</strong> — Sí 46% / No 54%</p>
-            <div class="bar yes" style="width:46%"></div>
+            <div class="bar yes" style="--target-width:46%"></div>
           </div>
 
           <div class="stat-item">
             <p><strong>Pregunta 6</strong> — Sí 7% / No 93%</p>
-            <div class="bar yes" style="width:7%"></div>
+            <div class="bar yes" style="--target-width:7%"></div>
           </div>
-
         </div>
-      </div>
 
+        <p class="stats-conclusion">
+          📌 <strong>Conclusión:</strong> La mayoría de la clase mantiene hábitos básicos de privacidad, 
+          pero el uso de prácticas avanzadas como leer permisos (14%) o desactivar cookies (7%) es muy bajo.  
+          Esto indica confianza alta en plataformas, pero también una exposición significativa.
+        </p>
+
+      </div>
     </div>
   </section>
 
   <!-- Bibliografía -->
   <section id="refs">
-    <h2> Bibliografía</h2>
+    <h2>6. Bibliografía</h2>
+
     <ul>
       <li>Zuboff, S. (2019). <em>The Age of Surveillance Capitalism</em>. PublicAffairs.</li>
       <li>Han, B. C. (2013). <em>La sociedad de la transparencia</em>. Herder.</li>
-      <li>Schab, J. I. (s.f.). <em>Vigilancia masiva y privacidad</em>. Universidad de Buenos Aires. 
-        <a href="http://bibliotecadigital.econ.uba.ar/econ/collection/tpos/document/1502-1700_SchabJI" target="_blank">Disponible aquí</a></li>
+      <li>Schab, J. I. (s.f.). <em>Vigilancia masiva y privacidad</em>. UBA. 
+        <a href="http://bibliotecadigital.econ.uba.ar/econ/collection/tpos/document/1502-1700_SchabJI" target="_blank">Disponible aquí</a>
+      </li>
+
       <li><em>Mass Surveillance – Computer Science Topics</em>. 
-        <a href="https://www.sciencedirect.com/topics/computer-science/mass-surveillance" target="_blank">ScienceDirect</a></li>
+        <a href="https://www.sciencedirect.com/topics/computer-science/mass-surveillance" target="_blank">ScienceDirect</a>
+      </li>
+
       <li><em>How We Investigated Mass Surveillance in Argentina</em>. 
-        <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a></li>
+        <a href="https://pulitzercenter.org/resource/how-we-investigated-mass-surveillance-argentina" target="_blank">Pulitzer Center</a>
+      </li>
 
       <li>
-         <em>Video recomendado:</em>
-        <a href="https://www.youtube.com/watch?v=pP3xlYiwAhA" target="_blank">
+        📺 <em>Video recomendado:</em>
+        <a href="https://www.youtube.com/watch?v=jD1JpZ2Jj0Y" target="_blank">
           ¿Qué es la vigilancia masiva? — Explicación clara
         </a>
       </li>
@@ -282,8 +312,9 @@
 
   <!-- CONTACTO -->
   <section id="contacto">
-    <h2> Contacto</h2>
-    <p>Si tenés dudas, inquietudes o querés dejar un comentario sobre la vigilancia digital, podés hacerlo acá:</p>
+    <h2>7. Contacto</h2>
+
+    <p>Si tenés dudas o querés dejar un comentario, podés hacerlo acá:</p>
 
     <form class="contact-form">
       <label>Nombre</label>
@@ -308,5 +339,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
